2002-12-12  Trey Matteson  <trey@apple.com>

	3117101 - PLT slows down as history fills up

	I saw a 3% sloth effect from a huge (100k) history.  This change cut that cost in half.
	I think we still have a marginally measurable cost for our worst practical case.

        Reviewed by rjw

        * History.subproj/WebHistoryPrivate.m:
        (-[WebHistoryPrivate insertEntry:atDateIndex:]):  Comment.
        (-[WebHistoryPrivate removeEntryForURLString:]):  Use removeIdentical
	instead of remove, since we don't need to do all the equals comparisons.

2002-12-12  Richard Williamson   <rjw@apple.com>

        Changes to fix 3116584.
        Reviewed by hyatt.
        
        Changes to support emptying the page cache from the
        "Empty Cache" menu.
        Reviewed by trey.

        * ChangeLog:
        * History.subproj/WebBackForwardList.h:
        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList clearPageCache]):
        * History.subproj/WebHistoryItem.m:
        (+[WebHistoryItem _scheduleReleaseTimer]):
        (-[WebHistoryItem _scheduleRelease]):
        (+[WebHistoryItem _releasePageCache:]):
        (-[WebHistoryItem setHasPageCache:]):
        * WebCoreSupport.subproj/WebTextRenderer.m:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _opened]):

2002-12-12  Richard Williamson   <rjw@apple.com>

        Fixed 3119693.  Restore scroll position when going back
        to item in b/f cache.
        
        Reviewed by trey.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _opened]):

=== Alexander-36 ===

2002-12-12  Richard Williamson   <rjw@apple.com>

        Change relating to 3083287.  This doesn't fix the problem but
        flips the geometry calcs to get most incremental images to draw
        correctly.  .mac now slideshows draw with the incorrect sliding 
        behavior while loading.
        
        3083287 has been moved to 0.9/1.
        
        Reviewed by darin.
